--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [isort]
-line_length=100
+# use black default line length to avoid conflicts
+line_length=88
 known_third_party =PIL,dataclasses_json,flask,flask_admin,flask_bootstrap,flask_login,flask_sqlalchemy,flask_wtf,loguru,requests,setuptools,sqlalchemy,werkzeug,wtforms
 profile = black
 src_paths = candy
