chore: specify python3.10 language version in pre-commit-config.yaml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,3 +31,6 @@ repos:
     hooks:
       - id: bandit
         args: ["--skip=B311", "--skip=B101"]
+
+default_language_version:
+  python: python3.10
